apps/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: torrent
  labels:
    app: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
      - name: qbittorrent
        image: linuxserver/qbittorrent:5.1.4
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: downloads
            mountPath: /downloads
          - name: config
            mountPath: /config
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: qbittorrent-downloads
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config
