apps/qbittorrent/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
  namespace: media
spec:
  hostnames:
    - qbittorrent.tomasmerino.com
  parentRefs:
    - name: homelab-gateway
      namespace: networking
  rules:
    - backendRefs:
        - name: qbittorrent
          port: 80
